Offer Page Copy Update

--- a/client/pages/offer-dav.html
+++ b/client/pages/offer-dav.html
@@ -209,18 +209,21 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
       <!-- LEFT: Subheadings with 50px margin between them -->
       <div class="wi2-left">
         <div class="wi2-item active ct-item" data-index="0">
-          <h4><span class="tick ct-tick">✔</span> Personalized Workout Plan</h4>
+          <h4><span class="tick ct-tick">✔</span> Personalized Workout <br>Plan</h4>
         </div>
         <div class="wi2-item ct-item" data-index="1">
           <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
-        <div class="wi2-item pt-item" data-index="2">
+        <div class="wi2-item ct-item" data-index="2">
+          <h4><span class="tick ct-tick">✔</span> Uses <br>  Dav's Structure</h4>
+        </div>
+        <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
         </div>
         <!-- <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> AI Meal & Body Scanners</h4>
         </div> -->
-        <div class="wi2-item pt-item" data-index="3">
+        <div class="wi2-item pt-item" data-index="4">
           <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
         <!-- <div class="wi2-item pt-item" data-index="5">
@@ -356,7 +359,7 @@ placeholder.replaceWith(iframe);
 </section> -->
 
     <h2 class="complete-workout-heading">
-      Complete Workout Plan
+      Complete Personalized Plan
     </h2>
     <ul class="workout-benefits">
       <li><strong>Workouts that adapt</strong> based on your performance and feedback</li>
