--- a/client/pages/offer-kayp.html
+++ b/client/pages/offer-kayp.html
@@ -117,7 +117,7 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
   </div>
   <div class="header">
     <div class="logo">
-        <img id="logo" class="logo" src="../assets/kayp-logo.png" alt="GAINS+ Logo">
+      <img id="logo" class="logo" src="../assets/kayp-logo.png" alt="GAINS+ Logo">
       </a>
     </div>
   </div>
@@ -209,18 +209,21 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
       <!-- LEFT: Subheadings with 50px margin between them -->
       <div class="wi2-left">
         <div class="wi2-item active ct-item" data-index="0">
-          <h4><span class="tick ct-tick">✔</span> Personalized Workout Plan</h4>
+          <h4><span class="tick ct-tick">✔</span> Personalized Workout <br>Plan</h4>
         </div>
         <div class="wi2-item ct-item" data-index="1">
           <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
-        <div class="wi2-item pt-item" data-index="2">
+        <div class="wi2-item ct-item" data-index="2">
+          <h4><span class="tick ct-tick">✔</span> Uses <br>KayP's Structure</h4>
+        </div>
+        <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
         </div>
         <!-- <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> AI Meal & Body Scanners</h4>
         </div> -->
-        <div class="wi2-item pt-item" data-index="3">
+        <div class="wi2-item pt-item" data-index="4">
           <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
         <!-- <div class="wi2-item pt-item" data-index="5">
@@ -273,7 +276,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <!-- left leaf -->
 
         <h3 class="asp-headline">
-          <span class="asp-number">10,000+</span>
+          <span class="asp-number">500+</span>
           <br>
           kick‑started their journey with us
         </h3>
@@ -286,11 +289,11 @@ so it doesn't appear above the 1st item or below the last item. -->
         <span class="asp-score">4.8&nbsp;/&nbsp;5</span>
 
         <!-- store badges – use your own assets if you prefer -->
-        <img src="../assets/apple-pay-mark.webp" alt="App Store" loading="lazy">
-        <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
+        <!-- <img src="../assets/apple-pay-mark.webp" alt="App Store" loading="lazy">
+        <img src="../assets/google-play.png" alt="Google Play" loading="lazy"> -->
       </div>
 
-      <p class="asp-reviews">2,500+ five‑star reviews from happy users</p>
+      <p class="asp-reviews">250+ five‑star reviews from happy users</p>
     </div>
   </section>
 
@@ -356,7 +359,7 @@ placeholder.replaceWith(iframe);
 </section> -->
 
     <h2 class="complete-workout-heading">
-      Complete Workout Plan
+      Complete Personalized Plan
     </h2>
     <ul class="workout-benefits">
       <li><strong>Workouts that adapt</strong> based on your performance and feedback</li>
@@ -421,19 +424,19 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 82 claimed their plan today. You're next</p>
+      <p class="first-1000">🔥 14 claimed their plan today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
-     
+
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
-        17 people bought plans in the last hour
+        5 people bought plans in the last hour
       </p>
       <div class="social-proof__recent">
-        <span class="social-proof__tag">ava 4-Week Plan</span>
-        <span class="social-proof__tag">ethan 4-Week Plan</span>
+        <span class="social-proof__tag">esa 4-Week Plan</span>
+        <span class="social-proof__tag">ahmed 4-Week Plan</span>
       </div>
     </section>
     <!-- <h3 class="offer-heading" id="path-to-progress">Claim Your Plan</h3> -->
@@ -489,7 +492,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (2,691 reviews)
+          <strong>4.8/5</strong> (281 reviews)
         </div>
       </div>
 
@@ -583,7 +586,7 @@ placeholder.replaceWith(iframe);
 </div> -->
 
       <!-- Offer Cards -->
-         <!--
+      <!--
       <div class="offer-card offer-tier" data-program="trial">
         <div class="offer-left">
           <div class="duration"><strong>1-Week Trial</strong></div>
@@ -650,7 +653,7 @@ placeholder.replaceWith(iframe);
         By continuing, you agree to our
         <a href="tos.html" target="_blank">terms</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-         Covered by
+        Covered by
         <a href="#moneyBackGuarantee" id="moneyBackGuaranteeLink" class="mbg-scroll-link">
           Money-Back Guarantee
         </a>.
@@ -675,8 +678,8 @@ placeholder.replaceWith(iframe);
 
   <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
     ✅ <strong>After checkout
-       <!-- (<span id="checkoutPrice">—</span>) -->
-       , your plan unlocks immediately</strong> – you’ll
+      <!-- (<span id="checkoutPrice">—</span>) -->
+      , your plan unlocks immediately</strong> – you’ll
     land on your dashboard.
   </p>
 
@@ -902,7 +905,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 2,691 reviews verified purchases</p>
+          <p class="reviews-hero__sub">Based on 281 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
@@ -928,12 +931,12 @@ alert('Could not initialise PayPal. Please refresh and try again.');
 
     <div class="reviews-pagination" id="reviewsPagination" aria-label="Review pages"></div>
 
-      <div class="post-faq-cta">
-    <button type="button" class="claim-program-btn" data-open-value-modal>
-      Claim My Plan
-    </button>
-  </div>
-  
+    <div class="post-faq-cta">
+      <button type="button" class="claim-program-btn" data-open-value-modal>
+        Claim My Plan
+      </button>
+    </div>
+
   </section>
 
   <!-- FAQ Section -->
@@ -1095,7 +1098,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       </p>
     </div>
   </div>
-  
+
 
   <script>
     let scrollTracked = false;
