--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -494,7 +494,7 @@ placeholder.replaceWith(iframe);
 
       <div class="rating-summary__reassurance">
         <p>Need reassurance?</p>
-        <button class="rating-summary__link" id="readReviewsLink" type="button">
+        <button class="rating-summary__link" id="readReviewsLink" type="button" data-scroll-target="reviews">
           Read reviews
         </button>
       </div>
