Updated Pricing Structure

--- a/client/pages/offer-decoded.html
+++ b/client/pages/offer-decoded.html
@@ -584,7 +584,7 @@ placeholder.replaceWith(iframe);
       <!-- Offer Cards -->
       <!-- <div class="offer-card offer-tier" data-program="trial">
         <div class="offer-left">
-          <div class="duration"><strong>1-Week Trial</strong></div>
+          <div class="duration"><strong>1-Week Plan</strong></div>
           <div class="full-price" data-full-price="£4.99">
             <span class="price-value" id="priceTrial">£4.99</span>
           </div>
@@ -596,10 +596,26 @@ placeholder.replaceWith(iframe);
           <div class="per-day">per day</div>
         </div>
       </div> -->
+      <div class="offer-card offer-tier" data-program="trial">
+        <div class="offer-left">
+          <div class="duration"><strong>1-Week Plan</strong></div>
+          <div class="full-price" data-full-price="£4.99">
+            <span class="price-value" id="priceTrial">£4.99</span>
+          </div>
+        </div>
+        <div class="offer-right">
+          <div class="cost-per-day">
+            <strong id="costPerDayTrial">£4.99</strong>
+          </div>
+          <div class="per-day">per day</div>
+        </div>
+      </div>
+
+
 
       <div class="offer-card offer-tier" data-program="4-week">
         <div class="best-seller-banner" aria-label="Most popular plan">MOST POPULAR</div>
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>4-Week Plan</strong></div>
           <div class="full-price" data-full-price="£19.99">
@@ -616,7 +632,7 @@ placeholder.replaceWith(iframe);
       </div>
 
       <div class="offer-card offer-tier" data-program="12-week">
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>12-Week Plan</strong></div>
           <div class="full-price" data-full-price="£39.99">
@@ -1122,7 +1138,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
           <div class="scratch-reveal">
             <div class="reveal-content">
               <div class="discount-badge">
-                <span class="discount-badge__main">51% OFF</span>
+                <span class="discount-badge__main">50% OFF</span>
               </div>
               <p id="promoCodeLine" class="promo-code-line" hidden></p>
               <p id="scratchDiscountNote" class="reveal-small" hidden>
