--- a/client/pages/offer-vital.html
+++ b/client/pages/offer-vital.html
@@ -273,7 +273,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <!-- left leaf -->
 
         <h3 class="asp-headline">
-          <span class="asp-number">10,000+</span>
+          <span class="asp-number">50,000+</span>
           <br>
           kick‑started their journey with us
         </h3>
@@ -290,7 +290,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
       </div>
 
-      <p class="asp-reviews">2,500+ five‑star reviews from happy users</p>
+      <p class="asp-reviews">15,000+ five‑star reviews from happy users</p>
     </div>
   </section>
 
@@ -421,7 +421,7 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 82 claimed their plan today. You're next</p>
+      <p class="first-1000">🔥 271 claimed their plan today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
@@ -429,7 +429,7 @@ placeholder.replaceWith(iframe);
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
-        17 people bought plans in the last hour
+        33 people bought plans in the last hour
       </p>
       <div class="social-proof__recent">
         <span class="social-proof__tag">ava 4-Week Plan</span>
@@ -489,7 +489,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (2,574 reviews)
+          <strong>4.8/5</strong> (16,227 reviews)
         </div>
       </div>
 
@@ -586,7 +586,7 @@ placeholder.replaceWith(iframe);
       <!--
       <div class="offer-card offer-tier" data-program="trial">
         <div class="offer-left">
-          <div class="duration"><strong>1-Week Trial</strong></div>
+          <div class="duration"><strong>1-Week Plan</strong></div>
           <div class="full-price" data-full-price="£4.99">
             <span class="price-value" id="priceTrial">£4.99</span>
           </div>
@@ -599,10 +599,26 @@ placeholder.replaceWith(iframe);
         </div>
       </div>
         -->
+      <div class="offer-card offer-tier" data-program="trial">
+        <div class="offer-left">
+          <div class="duration"><strong>1-Week Plan</strong></div>
+          <div class="full-price" data-full-price="£4.99">
+            <span class="price-value" id="priceTrial">£4.99</span>
+          </div>
+        </div>
+        <div class="offer-right">
+          <div class="cost-per-day">
+            <strong id="costPerDayTrial">£4.99</strong>
+          </div>
+          <div class="per-day">per day</div>
+        </div>
+      </div>
+
+
 
       <div class="offer-card offer-tier" data-program="4-week">
         <div class="best-seller-banner" aria-label="Most popular plan">MOST POPULAR</div>
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>4-Week Plan</strong></div>
           <div class="full-price" data-full-price="£19.99">
@@ -619,7 +635,7 @@ placeholder.replaceWith(iframe);
       </div>
 
       <div class="offer-card offer-tier" data-program="12-week">
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>12-Week Plan</strong></div>
           <div class="full-price" data-full-price="£39.99">
@@ -906,7 +922,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 2,574 reviews verified purchases</p>
+          <p class="reviews-hero__sub">Based on 16,227 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
