--- a/client/pages/offer-nhial.html
+++ b/client/pages/offer-nhial.html
@@ -586,7 +586,7 @@ placeholder.replaceWith(iframe);
          <!--
       <div class="offer-card offer-tier" data-program="trial">
         <div class="offer-left">
-          <div class="duration"><strong>1-Week Trial</strong></div>
+          <div class="duration"><strong>1-Week Plan</strong></div>
           <div class="full-price" data-full-price="£4.99">
             <span class="price-value" id="priceTrial">£4.99</span>
           </div>
@@ -599,10 +599,26 @@ placeholder.replaceWith(iframe);
         </div>
       </div>
         -->
+      <div class="offer-card offer-tier" data-program="trial">
+        <div class="offer-left">
+          <div class="duration"><strong>1-Week Plan</strong></div>
+          <div class="full-price" data-full-price="£4.99">
+            <span class="price-value" id="priceTrial">£4.99</span>
+          </div>
+        </div>
+        <div class="offer-right">
+          <div class="cost-per-day">
+            <strong id="costPerDayTrial">£4.99</strong>
+          </div>
+          <div class="per-day">per day</div>
+        </div>
+      </div>
+
+
 
       <div class="offer-card offer-tier" data-program="4-week">
         <div class="best-seller-banner" aria-label="Most popular plan">MOST POPULAR</div>
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>4-Week Plan</strong></div>
           <div class="full-price" data-full-price="£19.99">
@@ -619,7 +635,7 @@ placeholder.replaceWith(iframe);
       </div>
 
       <div class="offer-card offer-tier" data-program="12-week">
-        <div class="discount-flag" aria-label="Limited-time 51% discount">51% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>12-Week Plan</strong></div>
           <div class="full-price" data-full-price="£39.99">
