Forms + Offer Page Polish

--- a/client/pages/offer-ryan.html
+++ b/client/pages/offer-ryan.html
@@ -27,7 +27,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
-  <title>Claim my plan</title>
+  <title>Get my plan</title>
   <script>
     window.RTB_CREATOR_SLUG = 'ryan';
     if (!localStorage.getItem('selectedProgram') || localStorage.getItem('selectedProgram') === 'trial') {
@@ -117,7 +117,7 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
   </div>
   <div class="header">
     <div class="logo">
-        <img id="logo" class="logo" src="../assets/ryan-logo.png" alt="GAINS+ Logo">
+      <img id="logo" class="logo" src="../assets/ryan-logo.png" alt="GAINS+ Logo">
       </a>
     </div>
   </div>
@@ -215,7 +215,7 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
           <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
         <div class="wi2-item ct-item" data-index="2">
-          <h4><span class="tick ct-tick">✔</span> Uses <br>  Ryans's Structure</h4>
+          <h4><span class="tick ct-tick">✔</span> Uses <br> Ryans's Structure</h4>
         </div>
         <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
@@ -408,7 +408,7 @@ placeholder.replaceWith(iframe);
   <div class="floating-cta-container" id="floatingCtaContainer">
     <div class="floating-cta -cta" id="floating-cta">
       <button id="claimProgramBtn" class="claim-program-btn">
-        Claim My Plan
+        Get my plan
       </button>
     </div>
   </div>
@@ -428,7 +428,7 @@ placeholder.replaceWith(iframe);
     </div>
 
     <!-- Offer Cards -->
-     
+
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
@@ -586,7 +586,7 @@ placeholder.replaceWith(iframe);
 </div> -->
 
       <!-- Offer Cards -->
-         <!--
+      <!--
       <div class="offer-card offer-tier" data-program="trial">
         <div class="offer-left">
           <div class="duration"><strong>1-Week Plan</strong></div>
@@ -621,7 +621,7 @@ placeholder.replaceWith(iframe);
 
       <div class="offer-card offer-tier" data-program="4-week">
         <div class="best-seller-banner" aria-label="Most popular plan">MOST POPULAR</div>
-        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">51% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>4-Week Plan</strong></div>
           <div class="full-price" data-full-price="£19.99">
@@ -638,7 +638,7 @@ placeholder.replaceWith(iframe);
       </div>
 
       <div class="offer-card offer-tier" data-program="12-week">
-        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">51% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>12-Week Plan</strong></div>
           <div class="full-price" data-full-price="£39.99">
@@ -669,7 +669,7 @@ placeholder.replaceWith(iframe);
         By continuing, you agree to our
         <a href="tos.html" target="_blank">terms</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-         Covered by
+        Covered by
         <a href="#moneyBackGuarantee" id="moneyBackGuaranteeLink" class="mbg-scroll-link">
           Money-Back Guarantee
         </a>.
@@ -692,12 +692,12 @@ placeholder.replaceWith(iframe);
 
   </section>
 
-  <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
-    ✅ <strong>After checkout
-       <!-- (<span id="checkoutPrice">—</span>) -->
-       , your plan unlocks immediately</strong> – you’ll
-    land on your dashboard.
-  </p>
+<p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
+  ✅ <strong>After checkout, your plan unlocks immediately</strong> — you’ll land on your dashboard.<br><br>
+  You’re protected by our <strong>30-Day Money-Back Guarantee</strong>. If you don’t see results, you’ll receive a full refund.<br><br>
+  Includes personalised workouts, meals, and progress tracking.
+</p>
+
 
   <section id="loadingSection" class="loading-section" style="display: none;">
     <p id="loadingText">Loading...</p>
@@ -947,12 +947,12 @@ alert('Could not initialise PayPal. Please refresh and try again.');
 
     <div class="reviews-pagination" id="reviewsPagination" aria-label="Review pages"></div>
 
-      <div class="post-faq-cta">
-    <button type="button" class="claim-program-btn" data-open-value-modal>
-      Claim My Plan
-    </button>
-  </div>
-  
+    <div class="post-faq-cta">
+      <button type="button" class="claim-program-btn" data-open-value-modal>
+        Get my plan
+      </button>
+    </div>
+
   </section>
 
   <!-- FAQ Section -->
@@ -1114,7 +1114,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       </p>
     </div>
   </div>
-  
+
 
   <script>
     let scrollTracked = false;
