--- a/client/pages/sign-up-decoded.html
+++ b/client/pages/sign-up-decoded.html
@@ -71,7 +71,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
   <div class="signup-container">
     <div class="signup-box">
-      <h2>Your Plan is Ready</h2>
+      <h2>We’ve Built Your Plan</h2>
       <p class="subheading">
         Create your account to access everything — workouts, meals, and progress tracking tailored to you.
       </p>
