--- a/client/pages/sign-up-kayp.html
+++ b/client/pages/sign-up-kayp.html
@@ -69,11 +69,11 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <div class="signup-container">
+ <div class="signup-container">
     <div class="signup-box">
-      <h2>Your Plan is Ready</h2>
+      <h2>We’ve Built Your Plan</h2>
       <p class="subheading">
-        Create your account to access everything — workouts, meals, and progress tracking tailored to you.
+        Create your account to continue — your personalised plan is ready.
       </p>
   
       <form id="signup-form" novalidate>
@@ -122,7 +122,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Claim My Plan</button>
+        <button type="submit" class="signup-btn">Continue</button>
       </form>
   
       <p class="terms">
@@ -133,11 +133,11 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       </p>
   
         <p class="login-link">
-          Already have an account? <a href="log-in-kayp.html">Log in</a>
+          Already have an account? <a href="log-in-dav.html">Log in</a>
         </p>
     </div>
   </div>  
-
+  
   <footer class="footer fade-in" id="footer">
     <div class="footer-content">
             <p class="powered">POWERED BY</p>
