--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -27,7 +27,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
-  <title>Claim my plan</title>
+  <title>Get my plan</title>
   <script>
     if (!localStorage.getItem('selectedProgram') || localStorage.getItem('selectedProgram') === 'trial') {
       localStorage.setItem('selectedProgram', '4-week');
@@ -405,7 +405,7 @@ placeholder.replaceWith(iframe);
   <div class="floating-cta-container" id="floatingCtaContainer">
     <div class="floating-cta -cta" id="floating-cta">
       <button id="claimProgramBtn" class="claim-program-btn">
-        Claim My Plan
+        Get my plan
       </button>
     </div>
   </div>
@@ -631,7 +631,7 @@ placeholder.replaceWith(iframe);
 
       <div class="offer-card offer-tier" data-program="4-week">
         <div class="best-seller-banner" aria-label="Most popular plan">MOST POPULAR</div>
-        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">51% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>4-Week Plan</strong></div>
           <div class="full-price" data-full-price="£19.99">
@@ -648,7 +648,7 @@ placeholder.replaceWith(iframe);
       </div>
 
       <div class="offer-card offer-tier" data-program="12-week">
-        <div class="discount-flag" aria-label="Limited-time 50% discount">50% OFF</div>
+        <div class="discount-flag" aria-label="Limited-time 50% discount">51% OFF</div>
         <div class="offer-left">
           <div class="duration"><strong>12-Week Plan</strong></div>
           <div class="full-price" data-full-price="£39.99">
@@ -702,12 +702,14 @@ placeholder.replaceWith(iframe);
 
   </section>
 
-  <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
-    ✅ <strong>After checkout
+<p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
+  ✅ <strong>After checkout, your plan unlocks immediately</strong> — you’ll land on your dashboard.<br><br>
+  You’re protected by our <strong>30-Day Money-Back Guarantee</strong>. If you don’t see results, you’ll receive a full refund.<br><br>
+  Includes personalised workouts, meals, and progress tracking.
+  
       <!-- (<span id="checkoutPrice">—</span>) -->
-      , your plan unlocks immediately</strong> – you’ll
-    land on your dashboard.
-  </p>
+</p>
+
 
   <section id="loadingSection" class="loading-section" style="display: none;">
     <p id="loadingText">Loading...</p>
@@ -963,7 +965,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
 
     <div class="post-faq-cta">
       <button type="button" class="claim-program-btn" data-open-value-modal>
-        Claim My Plan
+        Get my plan
       </button>
     </div>
 
