--- a/client/pages/sign-up-dav.html
+++ b/client/pages/sign-up-dav.html
@@ -61,7 +61,6 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
   <div class="header">
     <div class="logo">
           <img id="logo" class="fade-in" src="../assets/dav-logo.png" alt="GAINS+ Logo">
-        </a>
       </div>
     <div class="dark-mode-button">
       <img id="darkModeToggle" class="fade-in" src="" alt=""
@@ -71,9 +70,9 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
   <div class="signup-container">
     <div class="signup-box">
-      <h2>Your Plan is Ready</h2>
+      <h2>We’ve Built Your Plan</h2>
       <p class="subheading">
-        Create your account to access everything — workouts, meals, and progress tracking tailored to you.
+        Create your account to continue — your personalised plan is ready.
       </p>
   
       <form id="signup-form" novalidate>
@@ -122,7 +121,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Claim My Plan</button>
+        <button type="submit" class="signup-btn">Continue</button>
       </form>
   
       <p class="terms">
