--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -70,11 +70,11 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     </div>
   </div>
 
-  <div class="signup-container">
+ <div class="signup-container">
     <div class="signup-box">
-      <h2>Your Plan is Ready</h2>
+      <h2>We’ve Built Your Plan</h2>
       <p class="subheading">
-        Create your account to access everything — workouts, meals, and progress tracking tailored to you.
+        Create your account to continue — your personalised plan is ready.
       </p>
   
       <form id="signup-form" novalidate>
@@ -123,7 +123,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Claim My Plan</button>
+        <button type="submit" class="signup-btn">Continue</button>
       </form>
   
       <p class="terms">
@@ -133,9 +133,9 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <a href="privacy-policy.html" target="_blank" rel="noopener">Privacy Policy</a>.
       </p>
   
-      <p class="login-link">
-        Already have an account? <a href="log-in.html">Log in</a>
-      </p>
+        <p class="login-link">
+          Already have an account? <a href="log-in-dav.html">Log in</a>
+        </p>
     </div>
   </div>  
 
