--- a/client/pages/offer-dav.html
+++ b/client/pages/offer-dav.html
@@ -201,9 +201,9 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
 
 
   <div class="whats-included-container">
-    <h2 class="wi2-heading">Inside Your Plan</h2>
-    <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adapt as you
-      go.</p>
+    <h2 class="wi2-heading">Built With Dav's Structure</h2>
+    <p class="wi2-description">Your plan is personalized to you — built using Dav's structure to keep you consistent.
+    </p>
 
     <div class="wi2-content">
       <!-- LEFT: Subheadings with 50px margin between them -->
@@ -215,7 +215,7 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
           <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
         <div class="wi2-item ct-item" data-index="2">
-          <h4><span class="tick ct-tick">✔</span> Uses <br> Dav's Structure</h4>
+          <h4><span class="tick ct-tick">✔</span> The same structure Dav follows</h4>
         </div>
         <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
@@ -278,7 +278,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <h3 class="asp-headline">
           <span class="asp-number">10,000+</span>
           <br>
-          kick‑started their journey with us
+          kick-started their journey using Dav’s structure
         </h3>
 
       </div>
@@ -359,19 +359,18 @@ placeholder.replaceWith(iframe);
 </section> -->
 
     <h2 class="complete-workout-heading">
-      Complete Personalized Plan
+      Your Personalized Plan — Built With Dav's Structure
     </h2>
     <ul class="workout-benefits">
-      <li><strong>Workouts that adapt</strong> based on your performance and feedback</li>
-      <li><strong>Meals that match your routine</strong> and fit around your lifestyle</li>
-      <li><strong>Progress tools</strong> that show what’s working and what to adjust</li>
-      <!-- <li>1-on-1 online coaching with your assigned coach for expert guidance</li> -->
+      <li>Workouts structured the way Dav trains</li>
+      <li>Meals built around your goal and routine</li>
+      <li>See how you’re progressing and what to do next</li>
     </ul>
   </div>
 
   <!-- Testimonials / Social Proof -->
   <div class="review-section">
-    <h3>This Isn’t Just Progress — It’s Personal</h3>
+    <h3>Results From Dav’s Structure</h3>
 
     <div class="before-after-images">
       <div class="before-image">
@@ -674,7 +673,7 @@ placeholder.replaceWith(iframe);
           Money-Back Guarantee
         </a>.
         Need reassurance?
-        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink">
+        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink" data-scroll-target="reviews">
           Read reviews
         </button>
       </p>
@@ -867,9 +866,9 @@ alert('Could not initialise PayPal. Please refresh and try again.');
   </section>
 
   <div class="testimonial-section ">
-    <h2>See What Happens When Everything Connects</h2>
+    <h2>Real Results From Real People</h2>
     <p class="hero-text">
-      Progress from real people, using the same system you're about to unlock.
+       Progress from people whose plans were built the same way as yours.
     </p>
 
     <div class="testimonial-container">
