--- a/client/pages/offer-vital.html
+++ b/client/pages/offer-vital.html
@@ -671,7 +671,7 @@ placeholder.replaceWith(iframe);
           Money-Back Guarantee
         </a>.
         Need reassurance?
-        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink">
+        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink" data-scroll-target="reviews">
           Read reviews
         </button>
       </p>
