Landing Page Copy Tweaks 2

--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,7 @@
 
         <section class="journey">
             <div class="section-header">
-                <p class="eyebrow">We do it all, end to end</p>
+                <p class="eyebrow">What happens after they click your link</p>
                 <h2>What your followers do</h2>
                 <p class="lede">It’s simple: click → complete quiz → pay → start. And it’s all under your brand.</p>
             </div>
@@ -237,6 +237,33 @@
                     </div>
                 </article>
 
+            </div>
+        </section>
+
+          <section class="stripe-proof" aria-labelledby="stripe-proof-heading">
+            <div class="section-header">
+                <p class="eyebrow">Stripe proof</p>
+                <h2 id="stripe-proof-heading">Real revenue growth, tracked in Stripe</h2>
+                <p class="lede">A real creator partnership dashboard screenshot showing month-over-month MRR gains.</p>
+            </div>
+            <div class="stripe-proof-card">
+                <div class="stripe-proof-media">
+                    <img src="../assets/stripe-screenshot.png"
+                        alt="Stripe dashboard chart showing MRR growth with a 79.9% increase"
+                        loading="lazy">
+                </div>
+                <div class="stripe-proof-copy">
+                    <h3>MRR up 79.9% in a single period</h3>
+                    <p>
+                        We show creators their revenue split, subscription growth, and upgrades directly inside Stripe,
+                        so it’s easy to track wins without spreadsheets.
+                    </p>
+                    <ul>
+                        <li>Clear month-over-month gains</li>
+                        <li>Automatic payouts via Stripe Connect</li>
+                        <li>Live visibility into recurring revenue</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -425,9 +452,11 @@
                 <article class="faq-item">
                     <button class="faq-question" type="button">Will my followers see your brand anywhere?</button>
                     <div class="faq-answer">
-                        <p>Your brand is what your followers see — your colours, tone, visuals, pages, and app. The only
-                            place our name may appear is on the card payment line (Stripe / Raising The Bar App Ltd) for
-                            legal and payment compliance. Everything your followers see looks like you.</p>
+                        <p>
+                            No. Your followers see your brand — your colours, visuals, pages, and app.
+                            Payments go through your connected Stripe account, so your name appears on the charge.
+                            Our name only appears in legal pages like the terms, contact page, and footer.
+                        </p>
                     </div>
                 </article>
                 <article class="faq-item">
@@ -454,8 +483,11 @@
                 <article class="faq-item">
                     <button class="faq-question" type="button">What if it doesn’t sell?</button>
                     <div class="faq-answer">
-                        <p>Then you can walk away. There’s £0 upfront in month 1, and no monthly fee during launch. We
-                            only get paid when you get paid, so our goals match yours.</p>
+                        <p>
+                            We don’t treat launch as the finish line.
+                            If sales aren’t immediate, we look at the data and make changes until it sells.
+                            This is a proven system, and every partner we’ve worked with has made sales.
+                        </p>
                     </div>
                 </article>
                 <article class="faq-item">
