Landing Page Copy Tweaks 4

--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
                         <p class="caption">creator partners</p>
                     </div>
                     <div>
-                        <p class="stat">£150k+</p>
+                        <p class="stat">£250k+</p>
                         <p class="caption">earned by partners</p>
                     </div>
                     <div>
@@ -369,9 +369,9 @@
         <section class="cta" id="call-form">
             <div class="cta-content">
                 <p class="eyebrow">Let’s build your app</p>
-                <h2>Tell us about your viewers.</h2>
+                <h2>Tell us about you.</h2>
                 <p class="lede">
-                    Send your details and a member of the team will be in touch within 24 hours.
+                    Tell us about you and your goals - a member of the team will be in touch within 24 hours.
                 </p>
             </div>
 
