My Mind Development

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -236,7 +236,7 @@
       <span class="emoji">🧠</span>
       <h2>My Mind</h2>
       <p class="status">Check in with how you’re feeling today.</p>
-      <p id="mmStreak" class="streak">🔥 0-day reflection streak</p>
+      <p id="mmStreak" class="streak">✨ Start your reflection streak today.</p>
       <a href="my-mind.html" class="cta">Go to My Mind</a>
     </article>
 
