--- a/client/pages/my-mind.html
+++ b/client/pages/my-mind.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
- <header class="header">
+  <header class="header">
     <a href="dashboard.html" class="logo">
       <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo">
     </a>
@@ -102,12 +102,11 @@
         <button class="mood-option" data-mood="stressed">😣 Stressed</button>
       </div>
       <p id="moodResponse" class="mood-response" aria-live="polite"></p>
-      <p id="mindStreak" class="mind-streak">🔥 0-day streak</p>
     </section>
 
     <section class="mind-card">
       <h2>Quick Reset</h2>
-      <p class="card-subtext">Take a minute to reset your head.</p>
+      <p class="card-subtext">Tap one below for a quick reset.</p>
       <div class="reset-grid">
         <button class="reset-tile" data-modal="breathe">Breathe</button>
         <button class="reset-tile" data-modal="write">Write</button>
